# translations

./: .gitignore  .gitmodules  CNAME  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  mdbook-spec  robots.txt  sitemap.xml  styles.css  translations.toml
book/: 404.html  appendix-00.html  appendix-01-keywords.html  appendix-02-operators.html  appendix-03-derivable-traits.html  appendix-04-useful-development-tools.html  appendix-05-editions.html  appendix-06-translation.html  appendix-07-nightly-rust.html  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-hello-cargo.html  ch02-00-guessing-game-tutorial.html  ch03-00-common-programming-concepts.html  ch03-01-variables-and-mutability.html  ch03-02-data-types.html  ch03-03-how-functions-work.html  ch03-04-comments.html  ch03-05-control-flow.html  ch04-00-understanding-ownership.html  ch04-01-what-is-ownership.html  ch04-02-references-and-borrowing.html  ch04-03-slices.html  ch05-00-structs.html  ch05-01-defining-structs.html  ch05-02-example-structs.html  ch05-03-method-syntax.html  ch06-00-enums.html  ch06-01-defining-an-enum.html  ch06-02-match.html  ch06-03-if-let.html  ch07-00-managing-growing-projects-with-packages-crates-and-modules.html  ch07-01-packages-and-crates.html  ch07-02-defining-modules-to-control-scope-and-privacy.html  ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html  ch07-04-bringing-paths-into-scope-with-the-use-keyword.html  ch07-05-separating-modules-into-different-files.html  ch08-00-common-collections.html  (+77 more)
cargo/: 404.html  CHANGELOG.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3e579610.js  searchindex-5ce47afe.js  searchindex-76302b4a.js  searchindex-7a90acc2.js  searchindex-7b5f4fd2.js  searchindex-7e12a821.js  searchindex-9143e04b.js  searchindex-950abf05.js  searchindex-d0035ae7.js  searchindex-d049d2a1.js  searchindex-e55139ad.js  searchindex-f3b3829e.js  searchindex-fcd36716.js  searchindex-fdfc728d.js  searchindex.js  searchindex.json  toc.html  toc.js
edition-guide/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
embedded-book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-e2c31831.js  searchindex.js  searchindex.json  toc.html  toc.js
nomicon/: 404.html  aliasing.html  atomics.html  beneath-std.html  borrow-splitting.html  casts.html  checked-uninit.html  coercions.html  (+47 more)
(+1867 files in other folders)
