[package]
name = "rust-lang-translations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow              = "1.0"
clap                = {version = "4.5", features = ["derive"]}
mdbook-i18n-helpers = {version = "0.3.3", path = "../mdbook-i18n-helpers/i18n-helpers"}
serde               = "1.0"
tera                = "1.20"
toml                = "0.5.11"

[dependencies.mdbook]
version = "0.4.37"
default-features = false
features = ["search"]
path = "../mdBook"
