[package]
name = "rust-lang-translations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow                = "1.0"
clap                  = {version = "4.5", features = ["derive"]}
fern                  = "0.7.0"
futures-util          = "0.3.28"
log                   = "0.4.25"
#mdbook-i18n-helpers   = {version = "0.3.3", path = "../mdbook-i18n-helpers/i18n-helpers"}
mdbook-i18n-helpers   = {git = "https://github.com/dalance/mdbook-i18n-helpers.git", branch = "export_xgettext"}
polib                 = "0.2.0"
serde                 = "1.0"
tera                  = "1.20"
tokio                 = {version = "1.28.1", features = ["macros", "rt-multi-thread"]}
toml                  = "0.5.11"
warp                  = {version = "0.3.6", default-features = false, features = ["websocket"]}

[dependencies.mdbook]
version = "0.4.37"
default-features = false
features = ["search"]
#path = "../mdBook"

[patch.crates-io]
mdbook = {git = 'https://github.com/dalance/mdbook.git', branch = "clear_render_preprocessor"}
polib = {git = 'https://github.com/dalance/polib.git', branch = "fix_panic"}
